--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "treevis",
-  "version": "0.1.2",
-  "description": "",
+  "version": "0.1.3",
+  "description": "Small utility to graph LeetCode trees",
+  "keywords": ["LeetCode", "tree", "graph"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaastonsr/treevis"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
